@startuml
title Class Diagram: Submit Return Request (UC22)

' Controller
class ReturnRequestController {
    - returnRequestService : ReturnRequestService
    + getReturnRequestsByCustomer() : ResponseEntity<List<ReturnRequestResponseDTO>>
    + submitReturnRequest(dto: SubmitReturnRequestDTO) : ResponseEntity<ReturnRequest>
}

' Service
interface ReturnRequestService <<interface>> {
    + getReturnRequestsByCustomer(customerId: Long) : List<ReturnRequestResponseDTO>
    + getOrderForReturn(orderId: Long) : Order
    + validateReturnEligibility(orderId: Long, itemIds: List<Long>) : List<OrderItem>
    + submitReturnRequest(dto: SubmitReturnRequestDTO) : ReturnRequest
}

class ReturnRequestServiceImpl {
    - orderRepository : OrderRepository
    - returnRequestRepository : ReturnRequestRepository
    - orderItemRepository : OrderItemRepository
    + getReturnRequestsByCustomer(customerId: Long) : List<ReturnRequestResponseDTO>
    + getOrderForReturn(orderId: Long) : Order
    + validateReturnEligibility(orderId: Long, itemIds: List<Long>) : List<OrderItem>
    + submitReturnRequest(dto: SubmitReturnRequestDTO) : ReturnRequest
}

' Repository
interface OrderRepository <<interface>> {
    + findById(orderId: Long) : Optional<Order>
}

interface ReturnRequestRepository <<interface>> {
    + save(entity: S) : <S extends T> S
    + findByCustomerId(customerId: Long) : List<ReturnRequest>
}

interface OrderItemRepository <<interface>> {
    + save(entity: S) : <S extends T> S
}

' DTO
class SubmitReturnRequestDTO {
    - orderId : Long
    - itemIds : List<Long>
    - reason : String
    - description : String
    - imageUrls : List<String>
}

class ReturnRequestResponseDTO {
    - id : Long
    - status : String
    - reason : String
    - orderId : Long
}

' Entity
class ReturnRequest {
    - id : Long
    - status : ReturnStatus
    - reason : String
    - description : String
    - requestDate : Date
    - processedAt : Date
    - rejectionReason : String
    - imageUrls : List<String>
}

class Order {
    - id : Long
    - status : OrderStatus
    - orderDate : Date
}

class OrderItem {
    - id : Long
    - price : Double
    - quantity : Long
    - productName : String
    - status : OrderStatus
}

' Relationships

' Implementation
ReturnRequestServiceImpl ..|> ReturnRequestService

' Dependency Injection
ReturnRequestController --> ReturnRequestService : - returnRequestService
ReturnRequestServiceImpl --> OrderRepository : - orderRepository
ReturnRequestServiceImpl --> ReturnRequestRepository : - returnRequestRepository
ReturnRequestServiceImpl --> OrderItemRepository : - orderItemRepository

' Object Usage
ReturnRequestController ..> SubmitReturnRequestDTO : <<uses>>
ReturnRequestController ..> ReturnRequestResponseDTO : <<returns>>
ReturnRequestServiceImpl ..> SubmitReturnRequestDTO : <<uses>>
ReturnRequestServiceImpl ..> ReturnRequestResponseDTO : <<returns>>

ReturnRequestServiceImpl ..> ReturnRequest : <<creates>>
ReturnRequestRepository ..> ReturnRequest : <<manages>>

ReturnRequestServiceImpl ..> Order : <<uses>>
OrderRepository ..> Order : <<manages>>

ReturnRequestServiceImpl ..> OrderItem : <<uses>>
OrderItemRepository ..> OrderItem : <<manages>>

@enduml